content/stylesheets/components/_chips.scss
.app-author-link {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  gap: 0.75ch;

  .app-avatar {
    width: 1.4rem;
    height: 1.4rem;

    @media (max-width: $app-mobile-breakpoint) {
      width: 1.625rem;
      height: 1.625rem;
    }
  }
}

